Change user based operations to new format
